Sync local project version